cs351 final project website

--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
 
  <br>
 
- <p>Combining her expertise in neuroscience with advanced AI technology, she created NeuralSync's revolutionary neural enhancement robot. What began in her MIT laboratory has now grown into a pioneering force in cognitive health technology, helping thousands maintain and improve their neural wellbeing.</p>
+ <p>Combining her expertise in neuroscience with advanced AI technology, she created NeuralSync's revolutionary neural enhancement robot. What began in her NJCU laboratory has now grown into a pioneering force in cognitive health technology, helping thousands maintain and improve their neural wellbeing.</p>
 
  <br>
 
