cs351 final project touchups

--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
 
  <h2>Our Story</h2>
 
- <p>Founded by neuroscientist Dr. Ashley Bernal in 2023, NeuralSync emerged from a deeply personal mission. After witnessing her grandmother's struggle with cognitive decline, Ashley dedicated her career to developing innovative solutions for neural health optimization.</p>
+ <p>Founded in 2023, NeuralSync AI emerged from a deeply personal mission. After witnessing her grandmother's struggle with cognitive decline, Ashley dedicated her career to developing innovative solutions for neural health optimization.</p>
 
  <br>
 
