--- a/index.html
+++ b/index.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
-
 <html lang="en">
-
-<head>
-
- <meta charset="UTF-8">
-
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
- <title>NeuralSync - Revolutionary Neural Health Optimization</title>
-
- <style>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>NeuralSync - Revolutionary Neural Health Optimization</title>
+        <!-- css -->
+        <style>
 
  * {
 
@@ -20,7 +15,7 @@
 
  box-sizing: border-box;
 
- font-family: 'Arial', sans-serif;
+ font-family: 'Verdana', sans-serif;
 
  }
 
@@ -296,29 +291,19 @@
 
  </style>
 
+<!-- html -->
 </head>
-
 <body>
-
- <nav>
-
- <div class="nav-content">
-
- <div class="logo">NeuralSync</div>
-
- <div class="nav-links">
-
- <a href="#features">Features</a>
-
- <a href="#story">Our Story</a>
-
- <a href="#contact">Contact</a>
-
- </div>
-
- </div>
-
- </nav>
+    <nav>
+        <div class="nav-content">
+            <div class="logo">NeuralSync</div>
+            <div class="nav-links">
+                <a href="#features">Features</a>
+                <a href="#story">Our Story</a>
+                <a href="#contact">Contact</a>
+            </div>
+        </div>
+    </nav>
 
 
 
@@ -380,11 +365,11 @@
 
  <h2>Our Story</h2>
 
- <p>Founded in 2023, NeuralSync AI emerged from a deeply personal mission. After witnessing her grandmother's struggle with cognitive decline, Ashley dedicated her career to developing innovative solutions for neural health optimization.</p>
+ <p>Founded in 2023, NeuralSync AI emerged from a deeply personal mission. After witnessing people's struggle with cognitive decline, we dedicated our career to developing innovative solutions for neural health optimization.</p>
 
  <br>
 
- <p>Combining her expertise in neuroscience with advanced AI technology, she created NeuralSync's revolutionary neural enhancement robot. What began in her NJCU laboratory has now grown into a pioneering force in cognitive health technology, helping thousands maintain and improve their neural wellbeing.</p>
+ <p>Combining our expertise in neuroscience with advanced AI technology, we created NeuralSync's revolutionary neural enhancement robot. What began in our NJCU laboratory has now grown into a pioneering force in cognitive health technology, helping thousands maintain and improve their neural wellbeing.</p>
 
  <br>
 
