so many commits my god

--- a/demo.html
+++ b/demo.html
@@ -1,44 +1,22 @@
 <!DOCTYPE html>
-
 <html lang="en">
-
-<head>
-
-<meta charset="UTF-8">
-
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<title>Schedule a Demo - NeuralSync</title>
-
-<style>
-
- * {
-
- margin: 0;
-
- padding: 0;
-
- box-sizing: border-box;
-
- font-family: 'Verdana', sans-serif;
-
- }
-
-
-
- :root {
-
- --primary: #2A6BBF;
-
- --secondary: #1E4D8C;
-
- --accent: #4CA3FF;
-
- --background: #F5F7FA;
-
- }
-
-
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Schedule a Demo - NeuralSync</title>
+        <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Verdana', sans-serif;
+        }
+        :root {
+            --primary: #2A6BBF;
+            --secondary: #1E4D8C;
+            --accent: #4CA3FF;
+            --background: #F5F7FA;
+        }
 
  body {
 
@@ -375,208 +353,93 @@
  </style>
 
 </head>
-
 <body>
-
-<nav>
-
-<div class="nav-content">
-
-<div class="logo">NeuralSync</div>
-
-<div class="nav-links">
-
-<a href="index.html">Home</a>
-
-<a href="#features">Features</a>
-
-<a href="#story">Our Story</a>
-
-<a href="#contact">Contact</a>
-
-</div>
-
-</div>
-
-</nav>
-
-
-
-<section class="demo-section">
-
-<div class="demo-info">
-
-<h1>Experience NeuralSync in Action</h1>
-
-<p>Schedule a personalized demonstration of our revolutionary neural health optimization technology.</p>
-
-
-
-<ul class="benefits-list">
-
-<li>One-on-one consultation with our neural health experts</li>
-
-<li>Personalized assessment of your cognitive optimization goals</li>
-
-<li>Live demonstration of NeuralSync's adaptive AI technology</li>
-
-<li>Detailed explanation of our non-invasive optimization process</li>
-
-<li>Opportunity to discuss your specific needs and questions</li>
-
-</ul>
-
-
-
-<p>Our demos typically last 45 minutes and can be conducted either virtually or at our research center in Cambridge, MA.</p>
-
-</div>
-
-
-
-<div class="demo-form">
-
-<form id="scheduleDemo" action="#" method="POST">
-
-<div class="form-group">
-
-<label for="name">Full Name</label>
-
-<input type="text" id="name" name="name" required>
-
-</div>
-
-
-
-<div class="form-group">
-
-<label for="email">Email Address</label>
-
-<input type="email" id="email" name="email" required>
-
-</div>
-
-
-
-<div class="form-group">
-
-<label for="phone">Phone Number</label>
-
-<input type="tel" id="phone" name="phone">
-
-</div>
-
-
-
-<div class="form-group">
-
-<label for="demo-type">Preferred Demo Type</label>
-
-<select id="demo-type" name="demo-type" required>
-
-<option value="">Select an option</option>
-
-<option value="virtual">Virtual Demo</option>
-
-<option value="in-person">In-Person Demo (Cambridge, MA)</option>
-
-</select>
-
-</div>
-
-
-
-<div class="form-group">
-
-<label for="preferred-date">Preferred Date</label>
-
-<input type="date" id="preferred-date" name="preferred-date" required>
-
-</div>
-
-
-
-<div class="form-group">
-
-<label for="preferred-time">Preferred Time</label>
-
-<select id="preferred-time" name="preferred-time" required>
-
-<option value="">Select a time</option>
-
-<option value="morning">Morning (9AM - 12PM)</option>
-
-<option value="afternoon">Afternoon (1PM - 4PM)</option>
-
-<option value="evening">Evening (5PM - 7PM)</option>
-
-</select>
-
-</div>
-
-
-
-<div class="form-group">
-
-<label for="message">Additional Information</label>
-
-<textarea id="message" name="message" placeholder="Tell us about your goals or any specific areas of interest..."></textarea>
-
-</div>
-
-
-
-<button type="submit" class="submit-button">Schedule Demo</button>
-
-</form>
-
-</div>
-
-</section>
-
-
-
-<section class="testimonials">
-
-<div class="testimonials-content">
-
-<h2>What Others Are Saying</h2>
-
-<div class="testimonial-grid">
-
-<div class="testimonial-card">
-
-<p>"The demo session exceeded my expectations. The team thoroughly explained the technology and answered all my questions. I'm impressed by how personalized the approach is."</p>
-
-<p><strong>- Dr. Sarah Johnson, Neurologist</strong></p>
-
-</div>
-
-<div class="testimonial-card">
-
-<p>"After seeing NeuralSync in action, I immediately understood its potential. The non-invasive approach and real-time optimization are truly revolutionary."</p>
-
-<p><strong>- Michael Chen, Tech Executive</strong></p>
-
-</div>
-
-</div>
-
-</div>
-
-</section>
-
-
-
-<footer class="footer">
-
-<p>Contact us: info@neuralsync.ai</p>
-
-<p>© 2024 NeuralSync. All rights reserved.</p>
-
-</footer>
-
+    <nav>
+        <div class="nav-content">
+            <div class="logo">NeuralSync</div>
+            <div class="nav-links">
+                <a href="index.html">Home</a>
+                <a href="#features">Features</a>
+                <a href="#story">Our Story</a>
+                <a href="#contact">Contact</a>
+            </div>
+        </div>
+    </nav>
+    <section class="demo-section">
+        <div class="demo-info">
+            <h1>Experience NeuralSync in Action</h1>
+            <p>Schedule a personalized demonstration of our revolutionary neural health optimization technology.</p>
+            <ul class="benefits-list">
+                <li>One-on-one consultation with our neural health experts</li>
+                <li>Personalized assessment of your cognitive optimization goals</li>
+                <li>Live demonstration of NeuralSync's adaptive AI technology</li>
+                <li>Detailed explanation of our non-invasive optimization process</li>
+                <li>Opportunity to discuss your specific needs and questions</li>
+            </ul>
+            <p>Our demos typically last 45 minutes and can be conducted either virtually or at our research center in Cambridge, MA.</p>
+        </div>
+        <div class="demo-form">
+            <form id="scheduleDemo" action="#" method="POST">
+                <div class="form-group">
+                    <label for="name">Full Name</label>
+                    <input type="text" id="name" name="name" required>
+                </div>
+                <div class="form-group">
+                    <label for="email">Email Address</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
+                <div class="form-group">
+                    <label for="phone">Phone Number</label>
+                    <input type="tel" id="phone" name="phone">
+                </div>
+                <div class="form-group">
+                    <label for="demo-type">Preferred Demo Type</label>
+                    <select id="demo-type" name="demo-type" required>
+                        <option value="">Select an option</option>
+                        <option value="virtual">Virtual Demo</option>
+                        <option value="in-person">In-Person Demo (Cambridge, MA)</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="preferred-date">Preferred Date</label>
+                    <input type="date" id="preferred-date" name="preferred-date" required>
+                </div>
+                <div class="form-group">
+                    <label for="preferred-time">Preferred Time</label>
+                    <select id="preferred-time" name="preferred-time" required>
+                        <option value="">Select a time</option>
+                        <option value="morning">Morning (9AM - 12PM)</option>
+                        <option value="afternoon">Afternoon (1PM - 4PM)</option>
+                        <option value="evening">Evening (5PM - 7PM)</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="message">Additional Information</label>
+                    <textarea id="message" name="message" placeholder="Tell us about your goals or any specific areas of interest..."></textarea>
+                </div>
+                <button type="submit" class="submit-button">Schedule Demo</button>
+            </form>
+        </div>
+    </section>
+    <section class="testimonials">
+        <div class="testimonials-content">
+            <h2>What Others Are Saying</h2>
+            <div class="testimonial-grid">
+                <div class="testimonial-card">
+                    <p>"The demo session exceeded my expectations. The team thoroughly explained the technology and answered all my questions. I'm impressed by how personalized the approach is."</p>
+                    <p><strong>- Dr. Sarah Johnson, Neurologist</strong></p>
+                </div>
+                <div class="testimonial-card">
+                    <p>"After seeing NeuralSync in action, I immediately understood its potential. The non-invasive approach and real-time optimization are truly revolutionary."</p>
+                    <p><strong>- Michael Chen, Tech Executive</strong></p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="footer">
+        <p>Contact us: info@neuralsync.ai</p>
+        <p>Ashley Bernal © 2024 NeuralSync. All rights reserved.</p>
+    </footer>
 </body>
-
 </html>
 
